--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/js/admin/class/classCreate.js": "/js/admin/class/classCreate.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css"
 }
